@@ -363,6 +363,7 @@ static struct convert {
 	{ "SQL_DOUBLE", "double", },
 	{ "SQL_FLOAT", "float", },
 	{ "SQL_GUID", "uuid", },
+	{ "SQL_HUGEINT", "hugeint", },
 	{ "SQL_INTEGER", "integer", },
 	{ "SQL_INTERVAL_DAY", "interval day", },
 	{ "SQL_INTERVAL_DAY_TO_HOUR", "interval day to hour", },
@@ -897,6 +898,7 @@ struct sql_types ODBC_sql_types[] = {
 	{SQL_SMALLINT, SQL_SMALLINT, 0, UNAFFECTED, UNAFFECTED, UNAFFECTED, UNAFFECTED, 10, SQL_TRUE},
 	{SQL_INTEGER, SQL_INTEGER, 0, UNAFFECTED, UNAFFECTED, UNAFFECTED, UNAFFECTED, 10, SQL_TRUE},
 	{SQL_BIGINT, SQL_BIGINT, 0, UNAFFECTED, UNAFFECTED, UNAFFECTED, UNAFFECTED, 10, SQL_TRUE},
+	{SQL_HUGEINT, SQL_HUGEINT, 0, UNAFFECTED, UNAFFECTED, UNAFFECTED, UNAFFECTED, 10, SQL_TRUE},
 	{SQL_REAL, SQL_REAL, 0, FLT_MANT_DIG, UNAFFECTED, UNAFFECTED, UNAFFECTED, 2, SQL_FALSE},
 	{SQL_FLOAT, SQL_FLOAT, 0, DBL_MANT_DIG, UNAFFECTED, UNAFFECTED, UNAFFECTED, 2, SQL_FALSE},
 	{SQL_DOUBLE, SQL_DOUBLE, 0, DBL_MANT_DIG, UNAFFECTED, UNAFFECTED, UNAFFECTED, 2, SQL_FALSE},
@@ -1131,6 +1133,8 @@ translateSQLType(SQLSMALLINT ParameterType)
 		return "SQL_INTEGER";
 	case SQL_BIGINT:
 		return "SQL_BIGINT";
+	case SQL_HUGEINT:
+		return "SQL_HUGEINT";
 	case SQL_GUID:
 		return "SQL_GUID";
 	case SQL_DATETIME:
