@@ -664,7 +664,7 @@ MNDBGetInfo(ODBCDbc *dbc,
 			"CALL,CHAIN,CLOB,COMMITTED,COPY,CORR,CUME_DIST,"
 			"CURRENT_ROLE,CYCLE,DATABASE,DELIMITERS,DENSE_RANK,"
 			"DO,EACH,ELSEIF,ENCRYPTED,EVERY,EXCLUDE,FOLLOWING,"
-			"FUNCTION,GENERATED,IF,ILIKE,INCREMENT,LAG,LEAD,"
+			"FUNCTION,GENERATED,HUGEINT,IF,ILIKE,INCREMENT,LAG,LEAD,"
 			"LIMIT,LOCALTIME,LOCALTIMESTAMP,LOCKED,MAXVALUE,"
 			"MEDIAN,MEDIUMINT,MERGE,MINVALUE,NEW,NOCYCLE,"
 			"NOMAXVALUE,NOMINVALUE,NOW,OFFSET,OLD,OTHERS,OVER,"
