@@ -1,6 +1,13 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Wed Jan 31 2018 Sjoerd Mullender <sjoerd@acm.org>
+- ODBC: Initial support for the HUGEINT type in SQL was added.  Any value
+  with type HUGEINT can be retrieved in a C variable with type SQL_C_CHAR
+  or SQL_C_WCHAR.  A value of type HUGEINT can be retrieved in other C
+  types as long as they fit, the largest C type supported being a 64 bit
+  integer (equivalent to BIGINT).
+
 * Thu Nov 16 2017 Sjoerd Mullender <sjoerd@acm.org>
 - The functions in the mapi library that require 64 bit integers now
   use the standard type int64_t instead of the non-standard mapi_int64.
